--- a/sass/blocks/_controllers.scss
+++ b/sass/blocks/_controllers.scss
@@ -2,10 +2,16 @@
 
 .game__next-step {
     & {
-        @include game-button;
-        position: absolute;
-        right: 5vw;
-        bottom: 5vh;
-        z-index: 3;
+        //@include game-button;
+        //position: absolute;
+        //right: 5vw;
+        //bottom: 5vh;
+        //z-index: 3;
+        max-width: 100%;
+        height: 100vh;
+        width: 100vw;
+        background-color: transparent;
+        border: none;
+        outline: none;
     }
 }
