--- a/sass/blocks/_scene.scss
+++ b/sass/blocks/_scene.scss
@@ -10,7 +10,7 @@
         width: 100vw;
         overflow: hidden;
         z-index: 1;
-        background-color: black;
+        background: #c2ffff; 
     }
 
     &.-is-disabled {
