--- a/sass/_mixins.scss
+++ b/sass/_mixins.scss
@@ -1,6 +1,3 @@
-@import 'mixins/_imgurl';
 @import 'mixins/_mquerys';
-@import 'mixins/_text-limiter';
-@import 'mixins/_grid';
 @import 'mixins/_buttons';
-@import 'mixins/_first-letter';
+@import 'mixins/_typewrite';
