--- a/sass/vars/_colors.scss
+++ b/sass/vars/_colors.scss
@@ -7,3 +7,8 @@ $g-purple: #49619d;
 $g-yellow: #ef9920;
 $g-blue: #308fc8;
 $g-green: #8bbc3c;
+
+$day: #c2ffff;
+$night: #135176;
+
+$g-quote: $night;
