--- a/sass/vars/_typography.scss
+++ b/sass/vars/_typography.scss
@@ -1,2 +1,7 @@
 
+//------------------------
+//  Tipografia do Projeto
+//------------------------
+
 @import url('https://fonts.googleapis.com/css?family=Roboto:300,400');
+@import url('https://fonts.googleapis.com/css?family=Roboto+Mono');
