--- a/sass/blocks/_scene.scss
+++ b/sass/blocks/_scene.scss
@@ -10,7 +10,7 @@
         width: 100vw;
         overflow: hidden;
         z-index: 1;
-        background: #c2ffff; 
+        background-color: $day;
     }
 
     &.-is-disabled {
@@ -46,14 +46,97 @@
     }
 }
 
+
+//-------------------------
+// Steps e Objetos da Cena
+//-------------------------
+
+.game.--start .game__truck {
+    & {
+        left: 2vw; 
+        z-index: 1;
+    }
+}
+
+.game.--end .game__truck {
+    & {
+        left: 112vw;
+        z-index: 1;
+    }
+}
+
+.game.--start {
+    
+    .game__typewriter {
+        
+        & {
+            position: absolute;
+            top: 5vw;
+            left: 0;
+            right: 0;
+            display: inline-block;
+            margin: 0 auto;
+            padding: 0 19vw;
+        }
+    }
+}
+
+.game__quote {
+    & {
+        display: none;
+    }
+}
+
 .game.--step1 {
     
+    .game__truck {
+        left: 34vw;
+    }
+
     .game__scene {
-        left: -500px;
+        // left: -680px;
     }
     
     .game__mountain {
         left: 1752px;
+    }
+
+    .game__quote {
+        & {
+            @include typewrite;
+            display: block;
+        }
+    }
+
+    .game__truck {
+
+        &:after {
+            
+            content: '';
+            background-repeat: no-repeat;
+            background-position: center center;
+            background-size: cover;
+            background-image: url('../../assets/img/hand-check.png');
+            display: block;
+            position: absolute;
+            bottom: 2vh;
+            left: 9vw;
+            animation: interation 5s ease-in;
+            animation-fill-mode: forwards;
+
+            @keyframes interation {
+                
+                from {
+                    width: 0;
+                    height: 0;
+                }
+    
+                to {
+                    width: 5vw;
+                    height: 8vw;
+                }
+            }
+        }
     }
 }
 
@@ -65,6 +148,24 @@
     
     .game__mountain {
         left: 1252px;
+    }
+
+    .game__truck {
+
+        &:after {
+            content: '';
+            background-repeat: no-repeat;
+            background-position: center center;
+            background-size: cover;
+            background-image: url('../../assets/img/hand-check.png');
+            display: block;
+            position: absolute;
+            bottom: 2vh;
+            left: 9vw;
+            animation: interation 5s ease-in;
+            width: 5vw;
+            height: 8vw;
+        }
     }
 } 
 
@@ -110,6 +211,16 @@
     .game__mountain {
         left: -748px;
     }
+
+    & {
+        will-change: animation;
+        animation: day_to_night 20s ease-in;
+        
+        @keyframes day_to_night {
+            0%{background-color: $night;}
+            100%{background-color: $day;}
+        }
+    }
 }
 
 .game.--step7 {
@@ -120,6 +231,16 @@
     
     .game__mountain {
         left: -1248px;
+    }
+
+    & {
+        will-change: animation;
+        animation: day_to_night 20s ease-in;
+        
+        @keyframes day_to_night {
+            0% {background-color: $day}
+            100% {background-color: $night}
+        }
     }
 }
 
