--- a/sass/mixins/_typewrite.scss
+++ b/sass/mixins/_typewrite.scss
@@ -10,18 +10,11 @@
         white-space: nowrap; 
         margin: 0 auto; 
         text-transform: uppercase;
-        border-right: 4px solid $night;
-        animation: typing 3.5s steps(200, end),
-        typing-cursor 1s step-end infinite;
+        animation: typing 3.5s steps(200, end);
 
         @keyframes typing {
             from { width: 0 }
             to { width: 100% }
-        }
-
-        @keyframes typing-cursor {
-            from, to { border-color: transparent }
-            50% { border-color: $night }
         }
     }
 }
