--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -217,7 +217,7 @@ p {
 }
 
 /* line 7, ../../sass/blocks/_scene.scss */
-.game {
+.game__scenario {
   position: relative;
   height: 100vh;
   width: 100vw;
@@ -225,15 +225,25 @@ p {
   z-index: 1;
   background-color: #c2ffff;
 }
-/* line 16, ../../sass/blocks/_scene.scss */
-.game.-is-disabled {
-  height: 0;
-  width: 0;
-  opacity: 0;
+
+/* line 18, ../../sass/blocks/_scene.scss */
+.game__scene {
+  z-index: -1;
 }
 
-/* line 25, ../../sass/blocks/_scene.scss */
+/* line 24, ../../sass/blocks/_scene.scss */
 .game__scene {
+  z-index: 1;
+}
+
+/* line 30, ../../sass/blocks/_scene.scss */
+.game__mountains {
+  z-index: 2;
+}
+
+/* line 38, ../../sass/blocks/_scene.scss */
+.game__scene,
+.game__mountains {
   position: absolute;
   top: 0;
   left: 0;
@@ -241,34 +251,27 @@ p {
   width: auto;
   max-width: inherit;
   transition: 5s left;
-  z-index: -1;
 }
 
-/* line 38, ../../sass/blocks/_scene.scss */
-.game__mountain {
-  width: 45vw;
-  height: auto;
-  position: absolute;
-  bottom: 14vh;
-  z-index: 2;
-  transition: 5s left;
-  left: 2301px;
+/* line 50, ../../sass/blocks/_scene.scss */
+.game__quote {
+  display: none;
 }
 
-/* line 55, ../../sass/blocks/_scene.scss */
-.game.--start .game__truck {
+/* line 60, ../../sass/blocks/_scene.scss */
+.game__scenario.--start .game__truck {
   left: 2vw;
   z-index: 1;
 }
 
-/* line 62, ../../sass/blocks/_scene.scss */
-.game.--end .game__truck {
+/* line 67, ../../sass/blocks/_scene.scss */
+.game__scenario.--end .game__truck {
   left: 112vw;
   z-index: 1;
 }
 
-/* line 72, ../../sass/blocks/_scene.scss */
-.game.--start .game__typewriter {
+/* line 77, ../../sass/blocks/_scene.scss */
+.game__scenario.--start .game__typewriter {
   position: absolute;
   top: 5vw;
   left: 0;
@@ -278,25 +281,16 @@ p {
   padding: 0 19vw;
 }
 
-/* line 85, ../../sass/blocks/_scene.scss */
-.game__quote {
-  display: none;
-}
-
-/* line 92, ../../sass/blocks/_scene.scss */
-.game.--step1 .game__truck {
+/* line 91, ../../sass/blocks/_scene.scss */
+.game__scenario.--step1 .game__truck {
   left: 26vw;
 }
 /* line 96, ../../sass/blocks/_scene.scss */
-.game.--step1 .game__mountain {
-  left: 2252px;
-}
-/* line 101, ../../sass/blocks/_scene.scss */
-.game.--step1 .game__quote {
+.game__scenario.--step1 .game__quote {
   display: block;
 }
 /* line 4, ../../sass/mixins/_typewrite.scss */
-.game.--step1 .game__quote {
+.game__scenario.--step1 .game__quote {
   font-size: 1.2em;
   font-weight: 600;
   text-align: center;
@@ -315,8 +309,8 @@ p {
     width: 100%;
   }
 }
-/* line 109, ../../sass/blocks/_scene.scss */
-.game.--step1 .game__truck:after {
+/* line 104, ../../sass/blocks/_scene.scss */
+.game__scenario.--step1 .game__truck:after {
   content: '';
   display: block;
   position: absolute;
@@ -338,105 +332,60 @@ p {
     height: 8vw;
   }
 }
-/* line 139, ../../sass/blocks/_scene.scss */
-.game.--step2 .game__scene {
+/* line 134, ../../sass/blocks/_scene.scss */
+.game__scenario.--step2 .game__scene,
+.game__scenario.--step2 .game__mountains {
   left: -1000px;
 }
-/* line 143, ../../sass/blocks/_scene.scss */
-.game.--step2 .game__mountain {
-  left: 1252px;
-}
-/* line 149, ../../sass/blocks/_scene.scss */
-.game.--step2 .game__truck:after {
+/* line 141, ../../sass/blocks/_scene.scss */
+.game__scenario.--step2 .game__truck:after {
   content: '';
+  width: 5vw;
+  height: 8vw;
+  display: block;
   background-repeat: no-repeat;
   background-position: center center;
   background-size: cover;
-  display: block;
   position: absolute;
   bottom: 2vh;
   left: 9vw;
   animation: interation 5s ease-in;
-  width: 5vw;
-  height: 8vw;
 }
 
-/* line 168, ../../sass/blocks/_scene.scss */
-.game.--step3 .game__scene {
+/* line 159, ../../sass/blocks/_scene.scss */
+.game__scenario.--step3 .game__scene,
+.game__scenario.--step3 .game__mountains {
   left: -1500px;
 }
-/* line 172, ../../sass/blocks/_scene.scss */
-.game.--step3 .game__mountain {
-  left: 752px;
-}
 
-/* line 179, ../../sass/blocks/_scene.scss */
-.game.--step4 .game__scene {
+/* line 167, ../../sass/blocks/_scene.scss */
+.game__scenario.--step4 .game__scene,
+.game__scenario.--step4 .game__mountains {
   left: -2000px;
 }
-/* line 183, ../../sass/blocks/_scene.scss */
-.game.--step4 .game__mountain {
-  left: 252px;
-}
 
-/* line 190, ../../sass/blocks/_scene.scss */
-.game.--step5 .game__scene {
+/* line 175, ../../sass/blocks/_scene.scss */
+.game__scenario.--step5 .game__scene,
+.game__scenario.--step5 .game__mountains {
   left: -2500px;
 }
-/* line 194, ../../sass/blocks/_scene.scss */
-.game.--step5 .game__mountain {
-  left: -248px;
-}
 
-/* line 201, ../../sass/blocks/_scene.scss */
-.game.--step6 .game__scene {
+/* line 183, ../../sass/blocks/_scene.scss */
+.game__scenario.--step6 .game__scene,
+.game__scenario.--step6 .game__mountains {
   left: -3000px;
 }
-/* line 205, ../../sass/blocks/_scene.scss */
-.game.--step6 .game__mountain {
-  left: -748px;
-}
-/* line 209, ../../sass/blocks/_scene.scss */
-.game.--step6 {
-  will-change: animation;
-  animation: day_to_night 20s ease-in;
-}
-@keyframes day_to_night {
-  0% {
-    background-color: #135176;
-  }
-  100% {
-    background-color: #c2ffff;
-  }
-}
-/* line 222, ../../sass/blocks/_scene.scss */
-.game.--step7 .game__scene {
+
+/* line 191, ../../sass/blocks/_scene.scss */
+.game__scenario.--step7 .game__scene,
+.game__scenario.--step7 .game__mountains {
   left: -3500px;
 }
-/* line 226, ../../sass/blocks/_scene.scss */
-.game.--step7 .game__mountain {
-  left: -1248px;
-}
-/* line 230, ../../sass/blocks/_scene.scss */
-.game.--step7 {
-  will-change: animation;
-  animation: day_to_night 20s ease-in;
-}
-@keyframes day_to_night {
-  0% {
-    background-color: #c2ffff;
-  }
-  100% {
-    background-color: #135176;
-  }
-}
-/* line 243, ../../sass/blocks/_scene.scss */
-.game.--step8 .game__scene {
+
+/* line 199, ../../sass/blocks/_scene.scss */
+.game__scenario.--step8 .game__scene,
+.game__scenario.--step8 .game__mountains {
   left: -4000px;
-}
-/* line 247, ../../sass/blocks/_scene.scss */
-.game.--step8 .game__mountain {
-  left: -1748px;
 }
 
 /* line 6, ../../sass/blocks/_intro.scss */
@@ -599,7 +548,7 @@ p {
     transform: rotate(360deg);
   }
 }
-/* line 4, ../../sass/blocks/_controllers.scss */
+/* line 7, ../../sass/blocks/_controllers.scss */
 .game__next-step {
   max-width: 100%;
   height: 100vh;
@@ -607,14 +556,5 @@ p {
   background-color: transparent;
   border: none;
   outline: none;
-}
-
-/* line 6, ../../sass/blocks/_objects.scss */
-.game__woods {
-  width: 22vw;
-  height: auto;
-  margin-left: 66vw;
-  transition: 5s left;
-  margin-top: 68vh;
-  z-index: 2;
+  z-index: 4;
 }
