--- a/sass/blocks/_scene.scss
+++ b/sass/blocks/_scene.scss
@@ -2,7 +2,7 @@
 // Section Scene
 //---------------------
 
-.game {
+.game__scenario {
     
     & {
         position: relative;
@@ -12,15 +12,28 @@
         z-index: 1;
         background-color: $day;
     }
+}
 
-    &.-is-disabled {
-        height: 0;
-        width: 0;
-        opacity: 0;
+.game__scene {
+    & {
+        z-index: -1;
     }
 }
 
 .game__scene {
+    & {
+        z-index: 1;
+    }
+}
+
+.game__mountains {
+    & {
+        z-index: 2;
+    }
+}
+
+.game__scene,
+.game__mountains {
     
     & {
         position: absolute;
@@ -30,42 +43,34 @@
         width: auto;
         max-width: inherit;
         transition: 5s left;
-        z-index: -1;
     }
 }
 
-.game__mountain {
+.game__quote {
     & {
-        width: 45vw;
-        height: auto;
-        position: absolute;
-        bottom: 14vh;
-        z-index: 2;
-        transition: 5s left;
-        left: 2301px;
+        display: none;
     }
 }
-
 
 //-------------------------
 // Steps e Objetos da Cena
 //-------------------------
 
-.game.--start .game__truck {
+.game__scenario.--start .game__truck {
     & {
         left: 2vw; 
         z-index: 1;
     }
 }
 
-.game.--end .game__truck {
+.game__scenario.--end .game__truck {
     & {
         left: 112vw;
         z-index: 1;
     }
 }
 
-.game.--start {
+.game__scenario.--start {
     
     .game__typewriter {
         
@@ -81,20 +86,10 @@
     }
 }
 
-.game__quote {
-    & {
-        display: none;
-    }
-}
-
-.game.--step1 {
+.game__scenario.--step1 {
     
     .game__truck {
         left: 26vw;
-    }
-    
-    .game__mountain {
-        left: 2252px;
     }
 
     .game__quote {
@@ -134,117 +129,75 @@
     }
 }
 
-.game.--step2 {
+.game__scenario.--step2 {
     
-    .game__scene {
+    .game__scene,
+    .game__mountains {
         left: -1000px;
-    }
-    
-    .game__mountain {
-        left: 1252px;
     }
 
     .game__truck {
 
         &:after {
             content: '';
+            width: 5vw;
+            height: 8vw;
+            display: block;
             background-repeat: no-repeat;
             background-position: center center;
             background-size: cover;
-            // background-image: url('../../assets/img/hand-check.png');
-            display: block;
             position: absolute;
             bottom: 2vh;
             left: 9vw;
             animation: interation 5s ease-in;
-            width: 5vw;
-            height: 8vw;
         }
     }
 } 
 
-.game.--step3 {
+.game__scenario.--step3 {
     
-    .game__scene {
+    .game__scene,
+    .game__mountains {
         left: -1500px;
-    }
-    
-    .game__mountain {
-        left: 752px;
-    }
+    }    
 }
 
-.game.--step4 {
+.game__scenario.--step4 {
     
-    .game__scene {
+    .game__scene,
+    .game__mountains {
         left: -2000px;
     }
-    
-    .game__mountain {
-        left: 252px;
-    }
 } 
 
-.game.--step5 {
+.game__scenario.--step5 {
     
-    .game__scene {
+    .game__scene,
+    .game__mountains {
         left: -2500px;
     }
-    
-    .game__mountain {
-        left: -248px;
-    }
 }
 
-.game.--step6 {
+.game__scenario.--step6 {
     
-    .game__scene {
+    .game__scene,
+    .game__mountains {
         left: -3000px;
     }
-    
-    .game__mountain {
-        left: -748px;
-    }
-
-    & {
-        will-change: animation;
-        animation: day_to_night 20s ease-in;
-        
-        @keyframes day_to_night {
-            0%{background-color: $night;}
-            100%{background-color: $day;}
-        }
-    }
 }
 
-.game.--step7 {
+.game__scenario.--step7 {
     
-    .game__scene {
+    .game__scene,
+    .game__mountains {
         left: -3500px;
     }
-    
-    .game__mountain {
-        left: -1248px;
-    }
-
-    & {
-        will-change: animation;
-        animation: day_to_night 20s ease-in;
-        
-        @keyframes day_to_night {
-            0% {background-color: $day}
-            100% {background-color: $night}
-        }
-    }
 }
 
-.game.--step8 {
+.game__scenario.--step8 {
     
-    .game__scene {
+    .game__scene,
+    .game__mountains {
         left: -4000px;
-    }
-    
-    .game__mountain {
-        left: -1748px;
     }
 }
