--- a/sass/blocks/_truck.scss
+++ b/sass/blocks/_truck.scss
@@ -13,6 +13,12 @@
         will-change: transition;
         transition: 5s left;
     }
+
+    &.--guep {
+        & {
+            bottom: 20.4vh;
+        }
+    }
 }
 
 .truck__animation--a,
